--- a/4DimenssionLLC/Views/Home/PrivacyPolicy.cshtml
+++ b/4DimenssionLLC/Views/Home/PrivacyPolicy.cshtml
@@ -12,11 +12,9 @@
     <div class="row">
         <div class="col-md-4">
             <a href="/" class="LogoAnch"><img class="logo-width" src="~/images/4dlogo.png" /></a>
-
         </div>
         <div class="col-md-4">
             <h2 class="headingFAq">Privacy Policy</h2>
-
         </div>
         <div class="col-md-4">
             <span class="PrintBtnSet" type="button" id="btnPrivacyStatementPrint">
@@ -24,8 +22,8 @@
             </span>
         </div>
     </div>
-
 </div>
+
 <div class="scrolbardiv" id="scrolbarid">
 
     <div class="force-overflow">
@@ -33,37 +31,52 @@
             <h1 class="ModelTitle">Privacy Statement</h1>
             <div class="PolicyAllign" id="printPrivacyStatementThis">
                 <p class="TROUSParagraph">
-                    Car Dealz Point is owned and operated by Blazor Techenology Inc. These Terms of Service apply to the Site, located at www.cardealzpoint.com,
-                    as well as to any mobile or similar versions of the site that cardealzpoint.com operates. By using the site, you hereby agree that you are at least
-                    eighteen (18) years of age and you acknowledge that you have read and agree to be bound by these terms of service and the cardealzpoint.com Privacy Statement and Pakistan &amp; global privacy notice.
+                    4Dimensions LLC is owned and operated by 4Dimensions LLC. These Terms of Service apply to the Site, located at www.4DimensionsLLC.com,
+                    as well as to any mobile or similar versions of the site that 4DimensionsLLC.com operates. By using the site, you hereby agree that you are at least
+                    eighteen (18) years of age and you acknowledge that you have read and agree to be bound by these terms of service and the 4DimensionsLLC.com Privacy Statement and Pakistan &amp; global privacy notice.
                 </p>
                 <p class="TROUSParagraph">
-                    Car Dealz Point is vehicles buying and selling portal.
-                    cardealzpoint.com operates the site as an online buying &amp; selling vehicles services for car buyers, sellers and enthusiasts.cardealzpoint.com does not sell vehicles directly
-                    and is never a party to any transaction between buyers and sellers. As a result, cardealzpoint.com does not (a) guarantee or ensure any vehicle
-                    or any transaction between a buyer and seller, (b) collect or process payment or transfer of title on behalf of buyers or sellers,
-                    or (c) warehouse, store, ship or deliver any vehicles.
+                    4Dimensions LLC provides dispatching services for transportation and logistics. info@4minensionsllc.com, operates as a platform to facilitate dispatching services between businesses and transport operators. info@4minensionsllc.com, does not handle the direct dispatch of vehicles, nor is it involved in the transportation of goods. As a result, 4DimensionsLLC.com does not (a) guarantee or ensure any dispatch or transportation arrangement, (b) collect or process payments related to dispatching services, or (c) manage, store, or deliver any goods or vehicles.
                 </p>
                 <p class="TROUSParagraph">
-                    Site Content all information and content available on this site (collectively, "Content") is protected by copyright and other intellectual property laws. The Content is owned by cardealzpoint.com, its affiliates, and/or their respective licensors and suppliers (collectively, "Licensors"). The Content is intended for personal and noncommercial use only. While you may interact with or download a single copy of any portion of the Content for your personal and noncommercial entertainment, information or use, you may not reproduce, sell, publish, distribute, modify, display, perform, re-post or otherwise use any portion of the Content in any other way or for any other purpose without the prior written consent of cardealzpoint.com. Requests regarding use of the Content for any purpose other than personal, noncommercial use should be directed to permissions, cardealzpoint.com, Lahore, Pakistan NOTICE: Certain automotive images or video contained herein are owned by Blazor Technologies Inc and are protected under United States and international copyright law. Access to and use of these images or video is restricted by the terms and conditions of a license agreement. Unauthorized use, reproduction, creation of derivative works, transmission, display or distribution of these images or video is strictly prohibited. Blazor Technologies Inc reserves the right to pursue all legal and equitable remedies against unauthorized use of data available cardealzpoint.com.
-
+                    Site Content: All information and content available on this site (collectively, "Content") is protected by copyright and other intellectual property laws. The Content is owned by 4DimensionsLLC.com, its affiliates, and/or their respective licensors and suppliers (collectively, "Licensors"). The Content is intended for personal and noncommercial use only. While you may interact with or download a single copy of any portion of the Content for your personal and noncommercial use, you may not reproduce, sell, publish, distribute, modify, display, perform, re-post or otherwise use any portion of the Content in any other way or for any other purpose without the prior written consent of info@4minensionsllc.com. Requests regarding use of the Content for any purpose other than personal, noncommercial use should be directed to permissions, info@4minensionsllc.com, Lahore, Pakistan.
+                    NOTICE: Certain automotive images or videos contained herein are owned by Blazor Technologies Inc and are protected under United States and international copyright law. Access to and use of these images or videos is restricted by the terms and conditions of a license agreement. Unauthorized use, reproduction, creation of derivative works, transmission, display, or distribution of these images or videos is strictly prohibited. Blazor Technologies Inc reserves the right to pursue all legal and equitable remedies against unauthorized use of data available at info@4minensionsllc.com,.
                 </p>
                 <p class="TROUSParagraph">
-                    To quit account or deletion of personal data of any user, using these options listed below, account is locked and all related data is removed.
-                </p><ul>
-                    <li>Unsubscribe from web application, link is avaliable in bottom of home page</li>
-                    <li>Unsubscribe from mobile apps, unsubscribe option is available on panel screen</li>
-                    <li>Send an email from same email account, describing request to quit your account to "admin@cardealzpoint". Within 2/3 work days user will be informed about deletion of data &amp; account</li>
+                    To quit an account or delete personal data, users can use the options listed below. Once the account is locked, all related data will be removed:
+                </p>
+                <ul>
+                    <li>Unsubscribe from the web application using the link available at the bottom of the home page</li>
+                    <li>Unsubscribe from mobile apps using the unsubscribe option available on the panel screen</li>
+                    <li>Send an email from the same email account, requesting account deletion, to "info@4minensionsllc.com". Within 2-3 business days, users will be informed about the deletion of their data and account</li>
                 </ul>
                 <p></p>
                 <p class="TROUSParagraph">
-                    <strong>Data Usage Statement.</strong>
-                    Car Dealz Point data collection and processing from 3rd logins, we are collecting Non-Personally Identifiable Information like name, username, email,profile avatar, contact / phone, unique id. Its for inhouse usage like contact purpose, not for selling purpose.
+                    <strong>Data Usage Statement.</strong> 4Dimensions LLC collects Non-Personally Identifiable Information such as name, username, email, profile avatar, contact/phone, and unique ID from third-party logins. This information is collected for internal use, including contact purposes, and is not sold to third parties.
                 </p>
-                <p class="TROUSParagraph pt-2 txt-cnter pb-2"><strong class="TROUSStrong">Last Updated:</strong> July 15, 2024</p>
-
+                <p class="TROUSParagraph pt-2 txt-cnter pb-2">
+                    <strong class="TROUSStrong">Last Updated:</strong> Oct 01, 2024
+                </p>
             </div>
         </div>
+
+
     </div>
 
 </div>
+
+<script type="text/javascript">
+    document.getElementById('btnPrivacyStatementPrint').addEventListener('click', function () {
+        var printContents = document.getElementById('printPrivacyStatementThis').innerHTML;
+        var originalContents = document.body.innerHTML;
+
+        // Temporarily replace the entire body with the privacy statement content
+        document.body.innerHTML = printContents;
+
+        // Trigger the print dialog
+        window.print();
+
+        // Restore the original body content
+        document.body.innerHTML = originalContents;
+    });
+</script>
