--- a/4DimenssionLLC/wwwroot/css/site.css
+++ b/4DimenssionLLC/wwwroot/css/site.css
@@ -35,7 +35,7 @@ body {
 /*DEFAULT*/
 p {
     font-family: 'Times New Roman';
-    font-size: 1.2em;
+    font-size: 1.4em;
 }
 .dispatch-para{
     text-align:justify;
@@ -484,11 +484,15 @@ header {
     padding-right: 2em;
     background-image: url('../images/4dlogo.png');*/
     background-size: 100% 100%;
+   
+}
+.padatop3 {
+    padding-top: 3em;
 }
 .bg-img {
     background-image: url('../images/4dlogo.png');
     background-size: 100% 100%;
-    height:40em;
+    height: 40em;
 }
 /*.mgTopSection{
     margin-top:-9em!important;
@@ -651,6 +655,47 @@ header {
 
 
 
+/* Add flexbox to align the table cells */
+table {
+    width: 100%;
+}
+
+td {
+    vertical-align: top; /* Align the content at the top */
+    padding: 15px;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+
+/* Flexbox to align card content */
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.inline-photo {
+    display: flex;
+    flex-direction: column;
+}
+
+.card_part {
+    flex: 1;
+    margin: 10px 0;
+}
+
+.banner {
+    text-align: center;
+}
+
+h1.title, h5.sub-title {
+    margin: 0;
+    padding: 10px;
+}
 
 
 
@@ -673,7 +718,7 @@ header {
 
             .slick table td ul li {
                 list-style: none;
-                padding: 10px 0px;
+                padding: 0px 0px;
             }
 
                 .slick table td ul li a {
@@ -695,7 +740,7 @@ header {
                 }
 
             .slick table td:nth-child(1) ul {
-                text-align: right;
+                text-align: left;
             }
 
             .slick table td:nth-child(3) ul {
@@ -719,7 +764,7 @@ header {
     .slick .card {
         position: relative;
         width: 95%;
-        height: 80vh;
+        height: 93vh;
         overflow: hidden;
         border-radius: 5px;
     }
@@ -747,7 +792,7 @@ header {
     height: 100%;
     background-size: cover;
     transform: translateX( 700px );
-    background-image: url("https://i.ibb.co/qDfqrrK/04.webp");
+    background-image: url(../images/4DSPS_SS1.jpeg);
     /*    background-image: url("https://i.ibb.co/qDfqrrK/04.webp");
 */ background-repeat: no-repeat;
     animation: opaqTransition 28s cubic-bezier(0, 0, 0, 0.97) infinite;
@@ -756,21 +801,22 @@ header {
 
     .slick .card_part.card_part-two {
         z-index: 6;
-        background-image: url("https://i.ibb.co/qDfqrrK/04.webp");
+        background-image: url(../images/4DSPS_SS7.jpeg);
+        /*background-image: url("https://i.ibb.co/qDfqrrK/04.webp");*/
         animation-delay: 7s;
         background-repeat: no-repeat;
     }
 
     .slick .card_part.card_part-three {
         z-index: 5;
-        background-image: url("https://i.ibb.co/qDfqrrK/04.webp");
+        background-image: url(../images/4DSPS_SS1.jpeg);
         animation-delay: 14s;
         background-repeat: no-repeat;
     }
 
     .slick .card_part.card_part-four {
         z-index: 4;
-        background-image: url("https://i.ibb.co/qDfqrrK/04.webp");
+        background-image: url(../images/4DSPS_SS7.jpeg);
         animation-delay: 21s;
         background-repeat: no-repeat;
     }
@@ -2817,10 +2863,33 @@ figure.snip1390 blockquote {
 .carousel-text {
    /* max-width: 60%;*/
     margin-right: 1em;
-    width: 95%;
+    width: 50%;
     padding-bottom: 7px;
     padding-top:7px;
 }
+.coming-soon {
+    color: white;
+    font-size: 2.5rem;
+    font-weight: 800!important;
+    padding-top: 6px; /* Padding for Coming Soon */
+    padding-right:2em;
+}
+
+.event-date {
+    color: white;
+}
+
+    .event-date h4 {
+        padding-top: 6px;
+        margin-bottom: 0px;
+        font-size: 1.5rem;
+        padding-right: 2em;
+    }
+
+    .event-date p {
+        font-size: 1.2rem;
+        padding-right: 2em;
+    }
 
 .carousel-caption h5 {
     margin: 0;
