--- a/4DimenssionLLC/wwwroot/css/site.css
+++ b/4DimenssionLLC/wwwroot/css/site.css
@@ -138,6 +138,7 @@ em {
     .inline-photo.is-visible {
         opacity: 1;
         transform: rotateZ(-0deg);
+        width:100%;
     }
 
 
@@ -792,7 +793,7 @@ h1.title, h5.sub-title {
     height: 100%;
     background-size: cover;
     transform: translateX( 700px );
-    background-image: url(../images/4DSPS_SS1.jpeg);
+    background-image: url(../images/4DSPS_SS1.png);
     /*    background-image: url("https://i.ibb.co/qDfqrrK/04.webp");
 */ background-repeat: no-repeat;
     animation: opaqTransition 28s cubic-bezier(0, 0, 0, 0.97) infinite;
@@ -801,7 +802,7 @@ h1.title, h5.sub-title {
 
     .slick .card_part.card_part-two {
         z-index: 6;
-        background-image: url(../images/4DSPS_SS7.jpeg);
+        background-image: url(../images/4DSPS_SS7.png);
         /*background-image: url("https://i.ibb.co/qDfqrrK/04.webp");*/
         animation-delay: 7s;
         background-repeat: no-repeat;
@@ -809,18 +810,20 @@ h1.title, h5.sub-title {
 
     .slick .card_part.card_part-three {
         z-index: 5;
-        background-image: url(../images/4DSPS_SS1.jpeg);
+        background-image: url(../images/4DSPS_SS1.png);
         animation-delay: 14s;
         background-repeat: no-repeat;
     }
 
     .slick .card_part.card_part-four {
         z-index: 4;
-        background-image: url(../images/4DSPS_SS7.jpeg);
+        background-image: url(../images/4DSPS_SS7.png);
         animation-delay: 21s;
         background-repeat: no-repeat;
     }
-
+#dispatching{
+    margin-top:-7em;
+}
 
 @keyframes opaqTransition {
     3% {
@@ -1296,6 +1299,9 @@ h1.title, h5.sub-title {
    text-align:left;
 }
 @media screen and (max-width:767px) {
+    #dispatching {
+        margin-top: 0em;
+    }
    /* .carousel-caption {
         margin-left: -3.7em!important;
     }*/
